--- a/android.gradle
+++ b/android.gradle
@@ -1,23 +1,37 @@
 android {
-    compileSdk 32
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
-        minSdk 24
-        targetSdk 32
+        minSdkVersion 24
+        targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+    flavorDimensions "version"
+    productFlavors {
+        qa {
+            dimension "version"
+        }
+        prod {
+            dimension "version"
+        }
+        dev {
+            dimension "version"
         }
     }
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+
+//    Properties props = new Properties()
+//    props.load(new FileInputStream(new File('local.properties')))
+//
+//    buildTypes {
+//        release {
+//            buildConfigField 'String', 'OPEN_WEATHER_API_KEY', props['OPEN_WEATHER_API_KEY']
+//            buildConfigField 'String', 'AUDIO_SCROBBLER_API_KEY', props['AUDIO_SCROBBLER_API_KEY']
+//        }
+//        debug {
+//            buildConfigField 'String', 'OPEN_WEATHER_API_KEY', props['DEBUG_OPEN_WEATHER_API_KEY']
+//            buildConfigField 'String', 'AUDIO_SCROBBLER_API_KEY', props['AUDIO_SCROBBLER_API_KEY']
+//        }
+//    }
 }
